changed paths to relative

--- a/Current GUI.ipynb
+++ b/Current GUI.ipynb
@@ -34,7 +34,7 @@
     "global logo_photo\n",
     "\n",
     "# load and display the application logo\n",
-    "logo_path = \"C:/Users/mnm4m/project/logo.jpg\"\n",
+    "logo_path = \"logo.jpg\"\n",
     "logo_image = Image.open(logo_path).resize((100, 100))\n",
     "logo_photo = ImageTk.PhotoImage(logo_image)\n",
     "logo_label = tk.Label(root, image=logo_photo, bg='white')\n",
