--- a/AnalysisRF.ipynb
+++ b/AnalysisRF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "7d5b22f9-9d88-4a91-9b97-c43fcb4842d7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "0990be14-e435-486d-a8ad-a7e6b0c3bbae",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "410cb195-4d50-4c8f-8101-59fdca02497d",
    "metadata": {},
    "outputs": [
@@ -121,6 +121,7 @@
     "estimator = random_forest.estimators_[0]  # get the first tree in the forest\n",
     "plt.figure(figsize=(20,10))\n",
     "plot_tree(estimator, filled=True, feature_names=X.columns, max_depth=3)\n",
+    "plt.savefig('single_tree.png')\n",
     "plt.show()"
    ]
   },
